--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div
                             class="absolute inset-0 bg-gradient-to-br from-primary/50 via-secondary/50 to-accent/50 rounded-full blur-2xl animate-morph">
                         </div>
-                        <img src="../assets/profile-1.png" alt="Profile Photo"
+                        <img src="./assets/profile-1.png" alt="Profile Photo"
                             class="absolute inset-0 w-full h-full object-cover z-10">
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                     class="bg-white dark:bg-dark-background rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                     <div class="h-48 relative">
                         <a href="thumbmed.html" class="block w-full h-full">
-                            <img src="../assets/image-2.jpg" alt="Crypto Platform" class="w-full h-full object-cover">
+                            <img src="./assets/image-2.jpg" alt="Crypto Platform" class="w-full h-full object-cover">
                             <div class="absolute inset-0 bg-black/20"></div>
                         </a>
                     </div>
